[package]
name = "provisioner-v2-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
card-backend-pcsc = "0.5.0"
chrono = "0.4.41"
encoding_rs = "0.8.35"
num-bigint = "0.4.6"
openpgp-card = "0.5.1"
openpgp-card-rpgp = "0.3.0"
pcsc = "2.9.0"
pgp = "0.15.0"
rand = "0.8"
rsa = "0.9.8"
secrecy = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ssh-key = { version = "0.6.7", features = ["rsa"] }
sshkeys = "0.3.3"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
    "json",
    "chrono",
    "env-filter",
] }
